--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
 <script>
-    const API_URL = 'https://wallace-warren-paid-diesel.trycloudflare.com'; // เปลี่ยนเป็น Cloudflared URL ถ้าใช้ Tunnel
+    const API_URL = ''; // เปลี่ยนเป็น Cloudflared URL ถ้าใช้ Tunnel
     
     // --- ฟังก์ชันตรวจสอบสถานะ API ---
     async function checkAPIServer() {
@@ -218,4 +218,5 @@
 </body>
 
 </html>
+
 
