--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
 <script>
-    const API_URL = 'https://madonna-lecture-demo-sacrifice.trycloudflare.com'; // เปลี่ยนเป็น Cloudflared URL ถ้าใช้ Tunnel
+    const API_URL = 'https://overseas-attorneys-defeat-customers.trycloudflare.com/'; // เปลี่ยนเป็น Cloudflared URL ถ้าใช้ Tunnel
     
     // --- ฟังก์ชันตรวจสอบสถานะ API ---
     async function checkAPIServer() {
@@ -218,6 +218,7 @@
 </body>
 
 </html>
+
 
 
 
