--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body { font-family: 'Sarabun', sans-serif; background:#f3f4f6; }
 </div>
 
 <script>
-const API_URL = 'https://tribute-dpi-casinos-bristol.trycloudflare.com';
+const API_URL = 'https://maranda-unhoed-unpervertedly.ngrok-free.dev';
 
 async function checkAPIServer() {
   const dot = document.getElementById('apiDot');
@@ -155,3 +155,4 @@ function renderResult(data) {
 
 </body>
 </html>
+
